--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -58,5 +58,11 @@
     <string name="traffic_laws">ПДД</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="partners">Партнеры</string>
+    <string name="etiquette">Этикет</string>
+    <string name="our_partners">Наши партнеры</string>
+    <string name="zamanuha">Здесь можете оказаться Вы</string>
+    <string name="city">Твой город</string>
+    <string name="link">info@great-larder.ru</string>
 
 </resources>
